kubernetes/main/apps/ai/searxng/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: searxng
  namespace: ai
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: searxng
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: open-webui
            io.kubernetes.pod.namespace: ai
        # - matchLabels:
        #     io.kubernetes.pod.namespace: home
        #     app.kubernetes.io/name: n8n
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
